[metadata]
name = bitbucketpy
version = PYTHON_PACKAGE_VERSION
author = Sarvin Coachbuilder
author_email = sarvinc@gmail.com
description = Simple library for interacting with the Bitbucket Cloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarvin/bitbucketpy
project_urls =
    Bug Tracker = https://github.com/sarvin/bitbucketpy/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: English
keywords = Bitbucket

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.extras_require]
develop = ipython
test = vcrpy  == 4.1.1

[options.packages.find]
where = src
